--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
   <table class="table table-dark">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last name</th>
+        <th scope="col">email</th>
+        <th scope="col">Phone Number</th>
       </tr>
     </thead>
     <tbody>
