--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,43 @@
 <!doctype html>
 <html>
 <head>
-  <title>My Page Title</title>
+  <title>Jason Clarke</title>
   <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
+
   <div class="container-fluid">
-
     <header class="row">
-
         <div class="col-xs-10 col-sm-10 col-md-11 col-lg-11">
             <h1 id="About Me">About me</h1>
         </div>
-
     </header>
-</div>
+  </div>
 
-  <table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+<nav class="navbar navbar-default">
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Information.html">About Me</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="FavBooks">Favorite Books</a>
+    </li>
+  </ul>
+</nav>
 
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+<main>
+  <div class="container">
+
+  <div class="content_block">
+    <h3>Jason Clarke</h3>
+    <p>Welcome to my homepage. I'm Jason.
+
+    <div class="textblock"
+      <p>I'm a keen learner and believe in an interdisciplinary approach to understanding the world. I'm currently an undergraduate studying Buisness, Plitics and Economics.</p>
+      
+
 </body>
 </html>
