--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
 
   <div class="content_block">
     <h3>Jason Clarke</h3>
-    <p>Welcome to my homepage. I'm Jason.
+    <p>Welcome to my homepage. I'm Jason.</p>
 
     <div class="textblock"
       <p>I'm a keen learner and believe in an interdisciplinary approach to understanding the world. I'm currently an undergraduate studying Buisness, Plitics and Economics.</p>
-      
-
+    </div>
+</div>
 </body>
 </html>
