--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Jason Clarke</title>
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
