--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,12 @@
   <div class="container">
 
   <div class="content_block">
+    <div class="thumbnail">
+      <a href="https://randomuser.me/api/portraits/men/25.jpg">
+        <img src="https://randomuser.me/api/portraits/men/25.jpg" alt= "Jason Clarke" title="Jason Clarke img from randomuser.me">
+        </a>
+    </div>
+
     <h3>Jason Clarke</h3>
     <p>Welcome to my homepage. I'm Jason.</p>
 
