Navigation bar on all pages, added images, and necessary contents

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <header class="row">
         <div class="col-xs-10 col-sm-10 col-md-11 col-lg-11">
-            <h1 id="About Me">About me</h1>
+            <h1 id="About Me">My Homepage</h1>
         </div>
     </header>
   </div>
@@ -31,7 +31,7 @@
       <a class="nav-link" href="Information.html">About Me</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="FavBooks">Favorite Books</a>
+      <a class="nav-link" href="FavBooks.html">Favorite Books</a>
     </li>
   </ul>
 </nav>
@@ -41,8 +41,8 @@
 
   <div class="content_block">
     <div class="thumbnail">
-      <a href="https://randomuser.me/api/portraits/men/25.jpg">
-        <img src="https://randomuser.me/api/portraits/men/25.jpg" alt= "Jason Clarke" title="Jason Clarke img from randomuser.me">
+      <a target="_blank" href="img/welcome.png">
+        <img src="img/welcome.png" alt= "Welcome" title="Welcome image">
         </a>
     </div>
 
