--- a/public/Information.html
+++ b/public/Information.html
@@ -10,7 +10,7 @@
 
     <!--Compiled and minified JavaScript-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 </nav>
 
 <a target="_blank" href="https://randomuser.me/api/portraits/men/25.jpg">
-  <img src="https://randomuser.me/api/portraits/men/25.jpg" alt= "Jason Clarke" title="Jason Clarke img from randomuser.me">
+  <img  class="square" src="https://randomuser.me/api/portraits/men/25.jpg" alt= "Jason Clarke" title="Jason Clarke img from randomuser.me">
   </a>
 
 <table class="table">
@@ -60,7 +60,7 @@
 </table>
 
 <a target="_blank" href="img/Tom.jpg">
-  <img src="img/Tom.jpg" alt= "Tom" title="My cat Tom">
+  <img class="square" src="img/Tom.jpg" alt= "Tom" title="My cat Tom">
   </a>
 
 
