--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <!--Compiled and minified JavaScript-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -46,8 +46,8 @@
         </a>
     </div>
 
-    <h3>Jason Clarke</h3>
-    <p>Welcome to my homepage. I'm Jason.</p>
+    <h3>Welcome to my Homepage</h3>
+    <p>Welcome to my homepage. I'm Jason and I'm a student at Indiana University</p>
 
     <div class="textblock"
       <p>I'm a keen learner and believe in an interdisciplinary approach to understanding the world. I'm currently an undergraduate studying Buisness, Plitics and Economics.</p>
