Aligned all images and texts

--- a/public/Information.html
+++ b/public/Information.html
@@ -35,7 +35,7 @@
     </li>
   </ul>
 </nav>
-
+<div class="content_block">
 <a target="_blank" href="https://randomuser.me/api/portraits/men/25.jpg">
   <img  class="square" src="https://randomuser.me/api/portraits/men/25.jpg" alt= "Jason Clarke" title="Jason Clarke img from randomuser.me">
   </a>
@@ -58,10 +58,15 @@
     </tr>
   </tbody>
 </table>
-
+</div>
+<br>
+<br>
 <a target="_blank" href="img/Tom.jpg">
   <img class="square" src="img/Tom.jpg" alt= "Tom" title="My cat Tom">
   </a>
+
+
+  <center> This is my cat 'TOM' and he is 6 years old</center>
 
 
 </body>
