Finalized all formats

--- a/public/FavBooks.html
+++ b/public/FavBooks.html
@@ -3,13 +3,8 @@
 <head>
   <title>Favorite Books</title>
   <!--Compiled and minified CSS-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-
-    <!--Compiled and minified JavaScript-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
