--- a/public/Information.html
+++ b/public/Information.html
@@ -3,13 +3,8 @@
 <head>
   <title>About Me</title>
   <!--Compiled and minified CSS-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-
-    <!--Compiled and minified JavaScript-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -39,6 +34,7 @@
 <a target="_blank" href="https://randomuser.me/api/portraits/men/25.jpg">
   <img  class="square" src="https://randomuser.me/api/portraits/men/25.jpg" alt= "Jason Clarke" title="Jason Clarke img from randomuser.me">
   </a>
+  <P >Source: https://randomuser.me/api/portraits/men/25.jpg</P>
 
 <table class="table">
   <thead class="thead-light">
@@ -64,6 +60,8 @@
 <a target="_blank" href="img/Tom.jpg">
   <img class="square" src="img/Tom.jpg" alt= "Tom" title="My cat Tom">
   </a>
+  <P>Source: https://www.foxnews.com/lifestyle/cat-sleeps-on-mans-face-camera</P>
+
 
 
   <center> This is my cat 'TOM' and he is 6 years old</center>
