--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,8 @@
 <head>
   <title>Jason Clarke</title>
   <!--Compiled and minified CSS-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-
-    <!--Compiled and minified JavaScript-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -42,12 +37,12 @@
   <div class="content_block">
     <div class="thumbnail">
       <a target="_blank" href="img/welcome.png">
-        <img src="img/welcome.png" alt= "Welcome" title="Welcome image">
+        <img class="welcome" src="img/welcome.png" alt= "Welcome" title="Welcome image">
         </a>
+        <P>Source: https://medium.ip.sx/were-thrilled-to-welcome-our-new-software-developer-calin-d06057dd2fc</P>
     </div>
-
-    <h3>Welcome to my Homepage</h3>
-    <p>Welcome to my homepage. I'm Jason and I'm a student at Indiana University</p>
+    
+    <h3>Welcome to my homepage. I'm Jason and I'm a student at Indiana University</h3>
 
     <div class="textblock"
       <p>I'm a keen learner and believe in an interdisciplinary approach to understanding the world. I'm currently an undergraduate studying Buisness, Plitics and Economics.</p>
