Final touches to table format

--- a/public/Information.html
+++ b/public/Information.html
@@ -37,7 +37,7 @@
   <P >Source: https://randomuser.me/api/portraits/men/25.jpg</P>
 
 <table class="table">
-  <thead class="thead-light">
+  <thead class="thead-dark">
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Country</th>
