--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,15 @@
   <div class="content_block">
     <div class="thumbnail">
       <a target="_blank" href="img/welcome.png">
-        <img class="welcome" src="img/welcome.png" alt= "Welcome" title="Welcome image">
+        <center><img class="welcome" src="img/welcome.png" alt= "Welcome" title="Welcome image"></center>
         </a>
         <P>Source: https://medium.ip.sx/were-thrilled-to-welcome-our-new-software-developer-calin-d06057dd2fc</P>
     </div>
-    
-    <h3>Welcome to my homepage. I'm Jason and I'm a student at Indiana University</h3>
 
-    <div class="textblock"
-      <p>I'm a keen learner and believe in an interdisciplinary approach to understanding the world. I'm currently an undergraduate studying Buisness, Plitics and Economics.</p>
-    </div>
+    <center><h3>Welcome to my homepage. I'm Jason and I'm a student at Indiana University</h3></center>
+
+    <center><h5>I'm a keen learner and believe in an interdisciplinary approach to understanding the world. I'm currently an undergraduate studying Buisness, Plitics and Economics.</h5></center>
+
 </div>
 </body>
 </html>
